<resources>
    <string name="app_name">YouAccount</string>
    <string name="db">db</string>
    <string name="dot">.</string>
    <string name="keep_accounts">记账</string>
    <string name="me">我的</string>
    <string name="paid_money">支付金额：</string>
    <string name="money">金额：</string>
    <string name="bill_type">账单类型：</string>
    <string name="type">类型：</string>
    <string name="this_week_total">本周支出：</string>
    <string name="expenditure">支出</string>
    <string name="yuan">元</string>
    <string name="data_invalid">输入数据无效</string>
    <string name="modify_time_invalid">修改时间无效</string>
    <string name="choose_bill_type">账单类型</string>
    <string name="eat">吃饭</string>
    <string name="triangle">▼</string>
    <string name="keep_an_account">记一笔</string>
    <string name="modify">修改</string>
    <string name="keep_accounts_time">记录时间：</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="query">查询</string>
    <string name="query_accounts">查询账单</string>
    <string name="modify_account">修改账单</string>
    <string name="record_success">记录成功</string>
    <string name="record_fail">记录失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="to">至</string>
    <string name="choose_month">按月选择</string>
    <string name="choose_date">按日选择</string>
    <string name="this_month">本月</string>
    <string name="choose_time">选择时间</string>
    <string name="modify_time">修改时间</string>
    <string name="choose_start_date">选择开始日期</string>
    <string name="choose_end_date">选择结束日期</string>
    <string name="end_date">结束日期</string>
    <string name="confirm">确定</string>
    <string name="over_six_month_message">选择的时间范围超过了6个月，请缩小范围后重试</string>
    <string name="querying">正在查询</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="input_money">输入金额</string>
    <string name="input_bill_type">输入类型</string>
    <string name="modify_password">修改密码</string>
    <string name="exit">退出</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="cancel">取消</string>
    <string name="are_you_sure_to_exit">确定退出登录？</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="register_new_account">注册新用户</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="close">X</string>
    <string name="welcome">欢迎使用YouAccount</string>
    <string name="skip">跳过</string>
    <string name="nickname">昵称：</string>
    <string name="eight_to_fifteen_character">8~15个字符</string>
    <string name="input_id">ID：</string>
    <string name="input_password">密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="confirm_register">确认注册</string>
    <string name="register_account">注册账号</string>
    <string name="twenty_number_letter_combined">1~20个数字或字母组合</string>
    <string name="twenty_character">1~20个字符</string>
    <string name="register_can_not_be_empty">注册数据不能为空</string>
    <string name="password_must_over_eight_character">密码不能少于8个字符</string>
    <string name="password_not_match">密码与确认密码不匹配</string>
    <string name="new_password_not_match">新密码与确认密码不匹配</string>
    <string name="register_success">注册成功,请使用此昵称登录：</string>
    <string name="register_fail">注册失败</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="nickname_can_not_be_empty">昵称不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="user_already_existed">用户已存在</string>
    <string name="login_success">登录成功</string>
    <string name="password_is_wrong">密码不正确</string>
    <string name="old_password">旧密码：</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_modify">确认修改</string>
    <string name="old_password_not_correct">旧密码不正确</string>
    <string name="password_has_been_modified">修改密码成功，请重新登录</string>
    <string name="nickname_has_been_modified">修改昵称成功</string>
    <string name="modify_password_fail">密码修改失败</string>
    <string name="modify_nickname_fail">昵称修改失败</string>
    <string name="version">版本号</string>
    <string name="delete_account">删除账单</string>
    <string name="backup">备份</string>
    <string name="backup_to_local_server">备份至本地服务器</string>
    <string name="backup_to_remote_server">备份至远程服务器</string>
    <string name="connecting_server">正在连接服务器</string>
    <string name="confirm_delete_bill_type">确定删除&#160;\"%s\"&#160;类型？</string>

    <string name="table_name_users">users</string>
    <string name="table_user_id">user_id</string>
    <string name="table_nickname">nickname</string>
    <string name="table_password">password</string>
    <string name="table_name_accounts">accounts</string>
    <string name="table_money">money</string>
    <string name="table_bill_type">bill_type</string>
    <string name="table_payment_time_mill">payment_time_mill</string>
    <string name="table_payment_time">payment_time</string>
    <string name="table_total_payment">total_payment</string>

    <string name="host">45.77.169.213</string>
    <string name="start_upload">start upload</string>
    <string name="finished">finished</string>
    <string name="ok">ok</string>
    <string name="terminator">-------END-------</string>

    <string-array name="bill_type">
        <item>吃饭</item>
        <item>购物</item>
        <item>充值</item>
        <item>房租</item>
        <item>娱乐</item>
        <item>车费</item>
    </string-array>
</resources>
