<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <include layout="@layout/layout_title_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/tv_money_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/money"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_money"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_toRightOf="@id/tv_money_name"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:hint="@string/input_money"
            android:textColorHint="@color/text_hint_gray"
            android:textSize="14sp"
            android:background="@drawable/shape_et_background"/>

        <TextView
            android:id="@+id/tv_bill_type_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/et_money"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/et_bill_type"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:layout_toRightOf="@id/tv_bill_type_name"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/input_bill_type"
            android:textColorHint="@color/text_hint_gray"
            android:text="@string/eat"
            android:textSize="14sp"
            android:background="@drawable/shape_et_background"/>

        <TextView
            android:id="@+id/tv_choose_type"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:layout_alignRight="@id/et_bill_type"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/triangle"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_keep_accounts"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/keep_an_account"
            android:foreground="@drawable/selector_round_btn_foreground"
            android:background="@drawable/shape_btn_background"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_dark_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="@color/background_gray">

        <TextView
            android:id="@+id/tv_this_week_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week_total"/>

        <TextView
            android:id="@+id/tv_this_week_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_this_week_total_title"
            android:text=""/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_dark_gray"/>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:listSelector="@drawable/selector_list_item_color"/>
</LinearLayout>