<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="101dp"
    android:background="@drawable/shape_dialog_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:text="@string/are_you_sure_to_exit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_dark_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/cancel"
            android:background="@drawable/selector_btn_cancel_confirm"/>

        <TextView
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/divider_dark_gray"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/confirm"
            android:background="@drawable/selector_btn_cancel_confirm"/>
    </LinearLayout>
</LinearLayout>