<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/paid_money"/>

        <EditText
            android:id="@+id/et_money"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:background="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bill_type"/>

        <TextView
            android:id="@+id/tv_bill_type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="其他"/>

        <TextView
            android:id="@+id/tv_keep_accounts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/keep_accounts"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="@color/background_gray">

        <TextView
            android:id="@+id/tv_this_week_total_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week_total"/>

        <TextView
            android:id="@+id/tv_this_week_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_this_week_total_title"
            android:text=""/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray"/>

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:listSelector="@android:color/transparent"/>
</LinearLayout>